BATCHEE-153 enable to build the project on java 11 and add spring-boot and embedded servlet jakarta relocations