@@ -26,7 +26,7 @@
 
     <groupId>org.apache.batchee</groupId>
     <artifactId>batchee</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>BatchEE</name>
 
@@ -39,12 +39,13 @@
 
 
     <properties>
+        <jaxb.version>2.3.4</jaxb.version>
         <atinject.version>1.0</atinject.version>
         <batch-api.version>1.0</batch-api.version>
         <jackson.version>2.2.2</jackson.version>
         <jodatime.version>2.10.9</jodatime.version>
-        <johnzon.version>1.2.9</johnzon.version>
-        <tomee.version>8.0.6</tomee.version>
+        <johnzon.version>1.2.15</johnzon.version>
+        <tomee.version>8.0.8</tomee.version>
         <xbean.version>4.19</xbean.version>
         <deltaspike.version>1.9.5</deltaspike.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -233,6 +234,16 @@
                 <directory>src/main/xsd</directory>
             </resource>
         </resources>
+
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-shade-plugin</artifactId>
+                    <version>3.2.4</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
 
         <plugins>
             <plugin>
@@ -439,6 +450,7 @@
                 <version>3.0.0-M5</version>
                 <configuration>
                     <trimStackTrace>false</trimStackTrace>
+                    <argLine>-Djdk.attach.allowAttachSelf=true</argLine> <!-- for javaagents (openejb, avoid useless stacks in logs) -->
                     <systemPropertyVariables>
                         <derby.stream.error.file>target/derby.log</derby.stream.error.file>
                     </systemPropertyVariables>
